<resources>
    <string name="app_name">ImasDB</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="base_url">https://api.themoviedb.org/3/</string>
    <string name="api_key">d8bc38ce00cdce9cbe04ac602f29ffbc</string>
    <string name="sign_up">sign up</string>
    <string name="movie_name">TextView</string>
    <string name="recently_played_movies">recently played movies</string>
    <string name="most_popular_movies">most popular movies</string>
    <string name="top_rated_movies">top rated movies</string>
    <string name="summary">summary</string>
    <string name="synopsis">synopsis</string>
    <string name="movie">movie</string>
    <string name="search_action_title">search</string>
    <string name="search_hint">Search Movies</string>
    <string name="rate_movie">Rate movie:</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="trends">Trends</string>
    <string name="favourites">Favourites</string>
    <string name="watch_list">Watch List</string>
    <string name="create_list">create list</string>
    <string name="delete">delete</string>
    <string name="logout">logout</string>

</resources>