<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trends"
            android:checked="true"
            android:title="@string/trends" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/login" />
    </group>
    <item android:title="Lists">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_favourite"
                    android:icon="@drawable/ic_baseline_favorite_24"
                    android:title="@string/favourites" />
                <item
                    android:id="@+id/nav_watchlist"
                    android:icon="@drawable/ic_baseline_bookmark_24"
                    android:title="@string/watch_list" />
                <item
                    android:id="@+id/nav_create_list"
                    android:icon="@drawable/ic_baseline_list_24_black"
                    android:title="@string/create_list" />
            </group>
        </menu>
    </item>
</menu>
