<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    android:fillViewport="true"

    tools:context=".view.MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundDark">

        <ImageView
            android:id="@+id/movieImage"
            android:layout_width="402dp"
            android:layout_height="339dp"
            android:contentDescription="@string/movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summaryText"
            style="@style/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"

            android:text="@string/summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsisLabel" />

        <TextView
            android:id="@+id/movieNameText"
            style="@style/movie_name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieImage" />

        <TextView
            android:id="@+id/ratingNumber"
            style="@style/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="28dp"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/ratingLabel"
            style="@style/titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="20dp"
            android:text="rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingNumber" />

        <TextView
            android:id="@+id/actors"
            style="@style/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actorsLabel" />

        <TextView
            android:id="@+id/actorsLabel"
            style="@style/titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="casts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <TextView
            android:id="@+id/reviewLabel"
            style="@style/titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="review:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />

        <TextView
            android:id="@+id/reviewText"
            style="@style/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewLabel" />

        <TextView
            android:id="@+id/production_year"
            style="@style/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toEndOf="@+id/movieNameText"
            app:layout_constraintTop_toBottomOf="@+id/movieImage" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieNameText" />

        <TextView
            android:id="@+id/popularityText"
            style="@style/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="44dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/popularityLabel"
            style="@style/titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="44dp"
            android:text="Popularity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularityText" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_btn_fav" />

        <TextView
            android:id="@+id/synopsisLabel"
            style="@style/titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/synopsis"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/summaryText" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"

            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actors" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:stepSize="0.5"
            android:theme="@style/RatingBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularityLabel" />

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/img_btn_fav"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@color/backgroundDark"
            android:src="@drawable/fav_icon_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider6" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/img_btn_watch_list"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@color/backgroundDark"
            android:src="@drawable/bookmark_icon_state"
            app:layout_constraintEnd_toStartOf="@+id/img_btn_fav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider6" />
        <TextView
            android:id="@+id/rateLabel"
            style="@style/titles"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:text="@string/rate_movie"
            app:layout_constraintEnd_toStartOf="@+id/ratingBar"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>